# ProgettoStage

./: README.md
esercizi/: BinaryClassification.ipynb  EsempioLOOCV.ipynb  LinearRegressionExercise.ipynb  LinearRegressionMultipleVariable.ipynb  inizializzazione.txt  pandasExample.ipynb  regressioneLineare.ipynb
goVersion/scripts/: go_linux.py  merge_results.py  vtuneGo.ps1  vtuneGo.py
goVersion/src/: go.mod  goVersion.py  main.go
goVersion/src/cli_tools/: cmd_parser.go
goVersion/src/data_process/: dataframeFromPaths.go  datasets.go  preprocessing.go
goVersion/src/machine_learning/: metrics_results.go  validation.go
rust_version/: Cargo.toml  merge_results.py  rustVersion.py  rust_linux.py  vtuneRust.ps1  vtuneRust.py
rust_version/src/: data_process.rs  main.rs  utils.rs
rust_version/src/data_process/: data.rs  errors.rs  fold_processing.rs  preprocessing.rs
rust_version/src/machine_learning/: validation.rs
rust_version/src/utils/: data_view.rs  dataset_from_path.rs
scalaVersion/: ScalaVersion.scala  build.sbt  scalaVersion.py
