[package]
name = "rust_version"
version = "0.1.0"
edition = "2024"
description = "A program to compute LOOCV, its execution time, and energy consumption (kWh)."

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
indicatif = {version = "0.18.3", features = ["rayon"]}
ittapi = "0.5.0"
linfa = "0.8.1"
linfa-logistic = "0.8.1"
ndarray = "0.16"
ordered-float = "5.1.0"
polars = { version = "0.52.0", features = ["ndarray","to_dummies"] }
polars-core = "0.52.0"
polars-io = "0.52.0"
rayon = "1.11.0"

