[package]
name = "rust_version"
version = "0.1.0"
edition = "2024"
description = "A program to compute LOOCV, its execution time, and energy consumption (kWh)."

[dependencies]
chrono = "0.4.43"

linfa = "0.8.1"
linfa-linear = "0.8.1"
ndarray = "0.16"
ordered-float = "5.1.0"
polars = { version = "0.52.0", features = ["ndarray"] }
polars-core = "0.52.0"
polars-io = "0.52.0"
rayon = "1.11.0"

